--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     background-image: url(./images/jdm-cars.jpg);
     background-size: cover;
     background-position: center;
+    padding-left: 300px;
 }
 
 .logo-dk{
@@ -23,45 +24,53 @@ body{
 .navbar{
     background-image: linear-gradient(rgb(83, 79, 79),black,black,black);
     color: gainsboro;
-    margin: 0px;
 }
-
-.container{
-    background-image: line-gradient(rgb(83,79,79),black,black,black);
-} 
 
 .d-flex {
     justify-content: space-between;
     color: white;
+    background-color: black;/* background para o nome e o preço rgb(83,79,79)*/
+}
+
+.container{
+    /* background-color: black; */
+    /* border: solid 3px blue; teste */
+    /* background-image: radial-gradient(rgb(83, 79, 79),black,black); */
 }
 
 .content{
-    background-color: black;
+    background-color: rgb(8,8,8);
     padding: 30px;
+    /* border: solid 3px yellow; */
 }
 
 .card-header{
     text-align: right;
+    margin: 0px;
+    padding: 0px;
+    background-color: black;
+}
+
+.card.bg-dark.rounded-0 .card-header{
+    background-color: black;
 }
 
 .card-img{
     width: 250px;
     height: 200px;
     object-fit: cover;
-    background-image: center;
+    /* background-image: center; */
 }
 
 .icone{
     height: 70px;
-    width: auto;
-    text-align: right;
 }
 
 .row{
     margin: 50px;
-    justify-content: space-between;
+    justify-content: space-between;  /*espaçamento entre os cards*/
 }
 
 li{
-    list-style: none;
+    list-style: none;        /*tirar o ponto do nome do carro e do valor*/
 }
