--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ body{
 }
 
 .container{
-    background-color: rgb(15,15,15); /*Opção1*/
+    background-color: black;/*opção1*/
+    /* background-color: rgb(15,15,15); Opção2 */
     /* border: solid 3px blue; teste */
 }
 
