--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     color: gainsboro;
 }
 
-.card-txt{
+.footer{
     justify-content:space-between;
     padding-top: 10px;
     color: white;
